--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -14,10 +14,11 @@ jobs:
         uses: actions/checkout@v3
 
       ### 🔐 Gitleaks
-      - name: Run Gitleaks
+      - name: Run Gitleaks (non-blocking)
         uses: gitleaks/gitleaks-action@v2
-        with:
+         with:
           args: "--source . --report-format sarif --report-path gitleaks.sarif"
+         continue-on-error: true
 
       ### 🔍 Semgrep
       - name: Run Semgrep
